22 Aprile 22:16 Buon punto con la home page dalla parte funzionale, vedere della grafica e della parte interna della pagina del bar, manca tutta la parte degli utenti

--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="en">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <title>Seats</title>
 </head>
 <body ng-app="app">
-    <input type="text" id="barra-ricerca" onkeyup="ricerca()" placeholder="Cerca">
-    <ul id="elenco">
-        <li ng-repeat="bar in bars"><a onclick="apriPagina()">{{bar}}</a></li>
-    </ul>
+    <div ng-controller="ctrl1">
+        <input type="text" id="barra-ricerca" onkeyup="ricerca()" placeholder="Cerca">
+        <div class="contenitor">
+            <ul id="elenco" type="none">
+                <li ng-repeat="bar in bars"><div class="smallContenitor">{{bar.Name}}</div><div><button onclick="apriPagina()">More Info</button></div></li>
+            </ul>
+        </div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
